[package]
name = "cli-test"
version = "0.25.2"
authors = ["Linfeng Qian <thewawar@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2"
tempfile = "3.0"
log = "0.4"
env_logger = "0.6"
toml = "0.5.0"
ckb-sdk = { path = "../ckb-sdk" }
ckb-types = { git = "https://github.com/nervosnetwork/ckb", branch = "rc/v0.25" }
ckb-app-config = { git = "https://github.com/nervosnetwork/ckb", branch = "rc/v0.25" }
ckb-chain-spec = { git = "https://github.com/nervosnetwork/ckb", branch = "rc/v0.25" }
ckb-crypto = { git = "https://github.com/nervosnetwork/ckb", branch = "rc/v0.25", features = ["secp"] }
ckb-hash = { git = "https://github.com/nervosnetwork/ckb", branch = "rc/v0.25" }
regex = "1.1.6"

# Prevent this from interfering with workspaces
[workspace]
members = ["."]
